Tabs flickering issue fixed

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -55,7 +55,9 @@
     }
 
     &>*:hover {
-        border-bottom: 2px solid var(--white);
+        background-image: linear-gradient(to top, $white 0%, $white 4%, transparent 4%); // MAGIC NUMBER -> 4% ~ 2px/.125rem TODO: Subject to be changed
+        background-size: cover;
+        transition: all ease .1s;
     }
 }
 
@@ -110,5 +112,7 @@ $value in $iconSizesMap {
 
 // ACTIVE TAB/MENU UTILITY CLASS
 .#{$prefix}-active {
-    border-bottom: 2px solid var(--white);
+    background-image: linear-gradient(to top, $white 0%, $white 4%, transparent 4%); // MAGIC NUMBER -> 4% ~ 2px/.125rem TODO: Subject to be changed
+    background-size: cover;
+    transition: all ease .1s;
 }
